2006-03-27  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionWriter.cs:
		Fix method spec "caching"
	  Mono.Cecil.Cil/OpCode.cs:
		Override ToString ();
	  Mono.Cecil.Metadata/MetadataToken.cs:
		Implement operator ==

	* Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil/TableComparers.cs:
		Better handling of generic tables sorting.

	* Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil/TableComparers.cs:
		Sort generic tables as well.

2006-03-27	Rodrigo B. de Oliveira	<rodrigobamboo@gmail.com>
	* Mono.Cecil.Metadata/MetadataWriter.cs:
		Use CompactFramework compatible version of
		System.Convert.ToBase64String.

2006-03-27  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.dll.sources
	  Mono.Cecil/GenericParameter.cs
	  Mono.Cecil/ConstraintCollection.cs
	  Mono.Cecil/IGenericParameter.cs
	  Mono.Cecil/IConstraintCollection.cs
	  CodeGen/cecil.xml:
		Add a ConstraintCollection to be used within
		generic parameters.

	* Mono.Cecil/GenericInstanceType.cs:
		Correctly return if the instance is a value type
		or not.

2006-03-25  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ModuleDefinition.cs:
		Support the unreadable security declarations
		when converting one to byte [].

	* Mono.Cecil/IModuleDefinition.cs
	  Mono.Cecil/ModuleDefinition.cs
	  Mono.Cecil/ReflectionWriter.cs:
		Add a FullLoad method on a module.

	* Mono.Cecil/StructureWriter.cs
	  Mono.Cecil/ReflectionWriter.cs:
		Fix a  few bugs in generics type emitting.

	* Mono.Cecil.Cil/CodeWriter.cs:
		Cache local sig as well.

2006-03-24  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionWriter.cs:
		Cache method specs as well.

	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs:
		Replace the foreach char pattern by
		Encoding.GetBytes

2006-03-23  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/TypeReferenceCollection.cs
	  Mono.Cecil/ExternTypeCollection.cs
	  Mono.Cecil/TypeDefinitionCollection.cs
	  CodeGen/templates/NamedCollectionImplem.cs